--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -15,9 +14,7 @@
 <style>
   * { margin:0; padding:0; box-sizing:border-box; }
   :root { --primary:#ff4444; --dark:#0a0a0a; --dark-light:#1a1a1a; --text:#fff; --text-muted:#9aa0a6; --accent:#ffcc00; }
-  html { scroll-behavior: smooth; } /* scroll suave para anclas */
-
-  /* Fuente global Montserrat */
+  html { scroll-behavior: smooth; }
   body{
     font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
     background:var(--dark); color:var(--text); overflow-x:hidden; line-height:1.6;
@@ -44,7 +41,6 @@
                 transform:translate(-50%,-50%); object-fit:cover; }
   .hero-overlay { position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.35), rgba(0,0,0,.65)); }
 
-  /* === FIX responsive hero === */
   .hero-content{
     position:relative; z-index:1; text-align:center;
     max-width:min(920px,92vw);
@@ -53,7 +49,6 @@
     padding-right:max(16px, env(safe-area-inset-right));
   }
   .hero h1{
-    font-family:"Montserrat",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;
     font-size:clamp(1.9rem, 9.2vw, 4.4rem);
     line-height:1.05; letter-spacing:-0.02em;
     max-width:min(18ch,92vw);
@@ -101,6 +96,64 @@
   }
 
   footer { text-align:center; padding:40px 20px; color:#888; }
+
+  /* ===== Overlay / Panel flotante “cristal” ===== */
+  .overlay {
+    position: fixed; inset: 0; z-index: 2000;
+    display: none; /* .is-open -> flex */
+    align-items: center; justify-content: center;
+    background: rgba(10,10,10,.55);
+    backdrop-filter: blur(16px) saturate(140%);
+    -webkit-backdrop-filter: blur(16px) saturate(140%);
+    transition: opacity .25s ease;
+    opacity: 0;
+  }
+  .overlay.is-open { display:flex; opacity:1; }
+
+  .panel {
+    position: relative;
+    width: min(980px, 92vw);
+    max-height: min(84vh, 900px);
+    overflow: auto;
+    background: rgba(255,255,255,0.06);
+    border: 1px solid rgba(255,255,255,0.18);
+    box-shadow: 0 20px 60px rgba(0,0,0,.6), inset 0 1px 0 rgba(255,255,255,.08);
+    border-radius: 22px;
+    padding: clamp(18px, 3vw, 28px);
+    -webkit-backdrop-filter: blur(24px) saturate(120%);
+    backdrop-filter: blur(24px) saturate(120%);
+  }
+  .panel-header{
+    display:flex; align-items:center; gap:12px; margin-bottom:12px;
+  }
+  .panel-title{
+    font-size: clamp(1.2rem, 2.4vw, 1.6rem);
+    font-weight: 800; letter-spacing: -.01em;
+    background: linear-gradient(135deg,#fff,#c9c9c9);
+    -webkit-background-clip: text; -webkit-text-fill-color: transparent;
+  }
+  .close-btn{
+    margin-left: auto;
+    appearance: none; border: 0; background: rgba(255,255,255,.1);
+    border:1px solid rgba(255,255,255,.22);
+    color:#fff; width:36px; height:36px; border-radius: 999px;
+    display:grid; place-items:center; cursor:pointer; font-size:18px; font-weight:900;
+  }
+  .close-btn:hover{ background: rgba(255,255,255,.16); }
+  .panel-body{
+    color:#e9e9e9; font-size: 0.98rem;
+  }
+  .panel-body p{ color:#cfcfcf; margin: 8px 0 14px; }
+  .panel-grid{
+    display:grid; grid-template-columns: 1.2fr .8fr; gap:16px; align-items:start;
+  }
+  .panel-grid img{ width:100%; height:auto; border-radius: 16px; display:block; }
+  @media (max-width:900px){
+    .panel-grid{ grid-template-columns: 1fr; }
+  }
+
+  /* Accesibilidad visual al enfocar */
+  :focus-visible{ outline:2px solid var(--primary); outline-offset:2px; border-radius:8px; }
 </style>
 </head>
 <body>
@@ -131,29 +184,27 @@
     <h1>PRODUCCIONES VERITÉ</h1>
     <p class="subtitle">Producción Audiovisual &amp; Contenido Digital</p>
     <div class="hero-cta">
-      <!-- Botón a Jotform -->
       <a class="btn btn-primary" href="https://form.jotform.com/252187264964669" target="_blank" rel="noopener">Solicitar Cotización</a>
-      <!-- Botón scroll suave a la sección de trabajos (cards) -->
       <a class="btn btn-secondary" href="#pv-cards">Ver Trabajos</a>
     </div>
   </div>
 </section>
 
-<!-- ===== Sección de Cards: Testimonios / Verticales / Promocionales (debajo del hero) ===== -->
+<!-- ===== Sección de Cards ===== -->
 <section aria-label="Categorías destacadas" id="pv-cards">
   <div class="pv-container">
     <div class="pv-cards-grid">
-      <a class="pv-card" href="#testimonios"><span>Testimonios</span></a>
-      <a class="pv-card pv-card--vertical" href="#verticales"><span>Verticales</span></a>
-      <a class="pv-card" href="#promocionales"><span>Promocionales</span></a>
+      <!-- Interceptamos el click por JS para abrir paneles -->
+      <a class="pv-card" href="#testimonios" data-panel="testimonios"><span>Testimonios</span></a>
+      <a class="pv-card pv-card--vertical" href="#verticales" data-panel="verticales"><span>Verticales</span></a>
+      <a class="pv-card" href="#promocionales" data-panel="promocionales"><span>Promocionales</span></a>
     </div>
   </div>
   <style>
-    /* ====== Estilos locales de la sección (no afecta al resto) ====== */
     #pv-cards{
       padding:clamp(24px,5vw,72px) 0;
       border-top:1px solid #141414; border-bottom:1px solid #141414;
-      scroll-margin-top: 96px; /* evita quedar oculto bajo el nav fijo al hacer scroll a #pv-cards */
+      scroll-margin-top: 96px;
     }
     #pv-cards .pv-container{width:min(1200px,92vw); margin-inline:auto}
     #pv-cards .pv-cards-grid{display:grid; gap:20px; grid-template-columns:2fr 1fr; grid-auto-rows:180px}
@@ -174,6 +225,7 @@
       border:1px solid #2b2b2b;
       box-shadow:inset 0 1px 0 rgba(255,255,255,.06), 0 10px 30px rgba(0,0,0,.5);
       overflow:hidden; transition:transform .25s ease, box-shadow .25s ease, border-color .25s ease;
+      cursor:pointer;
     }
     #pv-cards .pv-card::before{
       content:""; position:absolute; inset:0;
@@ -191,6 +243,56 @@
   </style>
 </section>
 <!-- ===== Fin sección de Cards ===== -->
+
+<!-- ===== Overlay Panels (uno por card) ===== -->
+<div class="overlay" id="overlay-root" aria-hidden="true">
+  <!-- Los paneles se llenan/activan por JS; dejamos contenedor vacío -->
+</div>
+
+<!-- Contenidos de paneles (puedes editar libremente) -->
+<section class="panel-body" id="panel-testimonios" hidden>
+  <div class="panel-header">
+    <h2 class="panel-title">Testimonios</h2>
+  </div>
+  <div class="panel-grid">
+    <div>
+      <p>Cómo trabajamos los videos de testimonios: planificación de preguntas, micro-dirección para naturalidad, sonido limpio y encuadres que cuidan la marca.</p>
+      <ul>
+        <li>Preproducción: guión de preguntas y scouting.</li>
+        <li>Rodaje: 1–2 cámaras, micrófonos inalámbricos.</li>
+        <li>Post: color, subtítulos, cortes para RRSS.</li>
+      </ul>
+    </div>
+    <img src="assets/panel/testimonios.jpg" alt="Fotograma de video de testimonio"/>
+  </div>
+</section>
+
+<section class="panel-body" id="panel-verticales" hidden>
+  <div class="panel-header">
+    <h2 class="panel-title">Verticales</h2>
+  </div>
+  <div class="panel-grid">
+    <div>
+      <p>Contenido optimizado para vertical (9:16): ritmo ágil, tipografías legibles, ganchos en los primeros 3 segundos.</p>
+      <p>Ideal para campañas always-on con variantes por público.</p>
+    </div>
+    <img src="assets/panel/verticales.jpg" alt="Ejemplo de video vertical en smartphone"/>
+  </div>
+</section>
+
+<section class="panel-body" id="panel-promocionales" hidden>
+  <div class="panel-header">
+    <h2 class="panel-title">Promocionales</h2>
+  </div>
+  <div class="panel-grid">
+    <div>
+      <p>Spots cortos y precisos para activar recordación de marca. Enfoque en propuesta de valor y diferenciadores.</p>
+      <p>Opciones: 15”, 30”, 45”, 60” y adaptaciones.</p>
+    </div>
+    <img src="assets/panel/promocionales.jpg" alt="Still de pieza promocional"/>
+  </div>
+</section>
+<!-- ===== Fin Overlay Panels ===== -->
 
 <section aria-label="Clientes y Partners" class="brand-strip">
   <div class="brand-viewport">
@@ -212,6 +314,7 @@
 <footer>© 2025 Producciones Verité. Todos los derechos reservados.</footer>
 
 <script>
+  // Navbar blur on scroll
   window.addEventListener('scroll', function(){
     var nav = document.getElementById('navbar');
     if(!nav) return;
@@ -219,6 +322,7 @@
     else nav.classList.remove('scrolled');
   });
 
+  // Brand track duplication + pause offscreen
   (function(){
     const track = document.getElementById('brandTrack');
     if (!track) return;
@@ -231,6 +335,7 @@
     }
   })();
 
+  // Hero video smart load
   (function(){
     const v = document.getElementById('heroVideo');
     if(!v) return;
@@ -251,7 +356,117 @@
       io.observe(v);
     } else { start(); }
   })();
+
+  // ===== Overlay Panels Controller =====
+  (function(){
+    const body = document.body;
+    const overlay = document.getElementById('overlay-root');
+    const cards = document.querySelectorAll('[data-panel]');
+    const panelBodies = {
+      testimonios: document.getElementById('panel-testimonios'),
+      verticales: document.getElementById('panel-verticales'),
+      promocionales: document.getElementById('panel-promocionales')
+    };
+    let lastFocused = null;
+
+    function buildPanel(contentEl){
+      // Limpia overlay y construye el panel con close + contenido clonado
+      overlay.innerHTML = '';
+      const panel = document.createElement('div');
+      panel.className = 'panel';
+      panel.setAttribute('role','dialog');
+      panel.setAttribute('aria-modal','true');
+      panel.setAttribute('aria-label', contentEl.querySelector('.panel-title')?.textContent || 'Detalle');
+
+      // Botón cerrar
+      const closeBtn = document.createElement('button');
+      closeBtn.className = 'close-btn';
+      closeBtn.setAttribute('aria-label','Cerrar panel');
+      closeBtn.innerHTML = '×';
+
+      // Contenido
+      const inner = contentEl.cloneNode(true);
+      inner.hidden = false;
+
+      // Inserta close en header (al final a la derecha)
+      const header = inner.querySelector('.panel-header');
+      if (header) header.appendChild(closeBtn);
+      else inner.prepend(closeBtn);
+
+      panel.appendChild(inner);
+      overlay.appendChild(panel);
+
+      // Eventos de cierre
+      closeBtn.addEventListener('click', closeOverlay);
+      overlay.addEventListener('click', (e)=>{ if(e.target === overlay) closeOverlay(); });
+
+      // Focus management
+      trapFocus(panel);
+      setTimeout(()=> closeBtn.focus(), 0);
+    }
+
+    function openOverlay(key){
+      const content = panelBodies[key];
+      if(!content) return;
+      lastFocused = document.activeElement;
+      buildPanel(content);
+      overlay.classList.add('is-open');
+      overlay.removeAttribute('aria-hidden');
+      body.style.overflow = 'hidden';
+      document.addEventListener('keydown', onKey);
+    }
+
+    function closeOverlay(){
+      overlay.classList.remove('is-open');
+      overlay.setAttribute('aria-hidden','true');
+      body.style.overflow = '';
+      overlay.innerHTML = '';
+      document.removeEventListener('keydown', onKey);
+      if (lastFocused && typeof lastFocused.focus === 'function') {
+        lastFocused.focus();
+      }
+    }
+
+    function onKey(e){
+      if (e.key === 'Escape') { e.preventDefault(); closeOverlay(); }
+    }
+
+    // Focus trap sencillo dentro del panel
+    function trapFocus(container){
+      const selectors = [
+        'a[href]','button:not([disabled])','textarea','input','select',
+        '[tabindex]:not([tabindex="-1"])'
+      ];
+      const getFocusables = () => Array.from(container.querySelectorAll(selectors.join(',')))
+        .filter(el => el.offsetParent !== null || el === document.activeElement);
+
+      container.addEventListener('keydown', (e)=>{
+        if (e.key !== 'Tab') return;
+        const f = getFocusables();
+        if (!f.length) return;
+        const first = f[0], last = f[f.length - 1];
+        if (e.shiftKey && document.activeElement === first) { e.preventDefault(); last.focus(); }
+        else if (!e.shiftKey && document.activeElement === last) { e.preventDefault(); first.focus(); }
+      });
+    }
+
+    // Intercepta clic en cards
+    cards.forEach(card=>{
+      card.addEventListener('click', (e)=>{
+        e.preventDefault();
+        const key = card.getAttribute('data-panel');
+        openOverlay(key);
+      });
+      // Accesible con Enter/Espacio si fuera necesario (ya que son <a>)
+      card.addEventListener('keydown', (e)=>{
+        if (e.key === 'Enter' || e.key === ' ') {
+          e.preventDefault();
+          const key = card.getAttribute('data-panel');
+          openOverlay(key);
+        }
+      });
+    });
+  })();
 </script>
 </body>
 </html>
-
